--- a/index.html
+++ b/index.html
@@ -1,7 +1,28 @@
+<!--　htmlファイル内で、!を記述後、tabキーを入力すると簡易フォーマットが生成される　-->
+
 <!DOCTYPE html>
-<html lnag="ja">
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>index</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script src="index.js" defer></script>
 </head>
+<body>
+    <mail>
+        <ul>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+        </ul>
+    </mail>
+</body>
 </html>
