--- a/dom/index.html
+++ b/dom/index.html
@@ -1,7 +1,7 @@
 <!--　htmlファイル内で、!を記述後、tabキーを入力すると簡易フォーマットが生成される　-->
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
