--- a/load/index.html
+++ b/load/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <div id="loading" class="loading">
+    <div id="loading" class="loading active">
         <div class="loadingText">Loading...</div>
     </div>
 
