--- a/practice.html
+++ b/practice.html
@@ -4,5 +4,5 @@
     <meta charset="utf-8">
     <title>htmlPractice</title>
 </head>
-    <div id="test"></div>
+    <div id="test" class="testclass"></div>
 </html>
